# quant-python-ai

./: LICENSE  Projectplan.md  README.md  env.example  main.py  mcp_server.py  pyproject.toml
agent/: backtest_engine.py  base_agent.py  finlab_tools.py  llm.py  quant_python_agent.py  quant_strategy_agent.py  scratchpad.py  tools.py
