[project]
name = "quant-python-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "tavily-python",
    "openai",
    "finmind>=1.9.5",
    "tabulate>=0.9.0",
    "mcp[cli]>=1.0.0",
    "finlab>=0.4.0",
]
