[project]
name = "quant-python-ai"
version = "0.2.0"
description = "Quant Python AI Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich",
    "prompt-toolkit",
    "python-dotenv",
    "tavily-python",
    "openai",
    "finmind>=1.9.5",
    "tabulate>=0.9.0",
    "mcp[cli]>=1.0.0",
    "finlab>=0.4.0",
]
